--- a/login.html
+++ b/login.html
@@ -101,7 +101,7 @@ h3{
   <input type="checkbox" >
   <label>41-50</label>
 </div><br>
-<a href="index1.html"><button type="button" title="Submit your data"> submit</button></a><br><br>
+<a href="slideshow.html"><button type="button" title="Submit your data"> submit</button></a><br><br>
 <input id ="Reset" name ="Reset"  title="Reset your data" type ="Reset"/> </div>
 </form>
 </div>
