--- a/contact.html
+++ b/contact.html
@@ -104,12 +104,12 @@ img {
 <body>
 
 <div class="topnav">
-  <a href="eman&aya.html" title="Go to the home page"> Home</a>
+  <a href="index.html" title="Go to the home page"> Home</a>
   <a href="content.html"title="Our content">About</a>
     <a href="slideshow.html" title="Go to slideshow">Gallery</a>
   <a class="active" href="contact.html" title=" How to contact us">Contact</a>
   <div class="search-container">
-    <form action="index1.html">
+    <form action="index.html">
       <input type="text" title="Search for what you want" placeholder="Search.." name="search">
       <button type="submit"><i class="fa fa-search"></i></button>
     </form>
